Fix sanitize email and phone
